# ProofTrapar_LLVM

./: .gitignore  14_spin2003.c  14_spin2003.ll  AFA_1(0).dot  AFA_1.dot  AFA_2.dot  AFA_3.dot  AFA_4.dot  AFA_5.dot  AFA_6.dot  Boop_simple_vf.c  Boop_simple_vf.ll  CMakeLists.txt  Checker.dot  Complemented.dot  DFAConverted.dot  DebugNewMethod.dot  DetermOriginal.dot  Pass1.dot  Pass2AfterDeletion.dot  Pass4ConversionEpsilon.dot  Pass4EpsilonClosed.dot  Pass4EpsilonClosure.dot  Pass4EpsilonClosure2.dot  Pass4Phase1EpsilonClosure.dot  Pass4SelfLooped.dot  README.md  a1.dot  a2.dot  a3.dot  a4.dot  a5.dot  a6.dot  a7.dot  acquire_lock_graph.dot  allocator_graph.dot  arithmetic_prog.c  arithmetic_prog.ll  auto(duplicate)1.dot  auto(duplicate)2.dot  (+98 more)
10/: 10_1.dot  10_2.dot  1_1.dot  1_2.dot  2_1.dot  2_2.dot  3_1.dot  3_2.dot  4_1.dot  4_2.dot  5_1.dot  5_2.dot  6_1.dot  6_2.dot  7_1.dot  7_2.dot  8_1.dot  8_2.dot  9_1.dot  9_2.dot  traces.txt
14/: 10_2.dot  11_2.dot  12_1.dot  13_1.dot  13_2.dot  14_2.dot  1_1.dot  1_2.dot  2_2.dot  3_2.dot  4_1.dot  4_2.dot  5_1.dot  5_2.dot  6_1.dot  6_2.dot  7_1.dot  8_1.dot  9_1.dot  9_2.dot
analysis/: Pass4EpsilonClosed_1.dot  Pass4EpsilonClosed_2.dot  myselfloop.dot
analysis/run/: myselfloop.dot
augeas-1.4.0/src/: Makefile  Makefile.in  augparse  augtool  builtin.c  fa.c  fa.h  fa_sym.version  get.c  info.c  lens.c  lexer.c  libaugeas.la  libfa.la  liblexer.la  parser.c  parser.h  parser.y  pathx.c  put.c  ref.h  regexp.c  syntax.c
augeas-1.4.0/src/.deps/: ast.Plo  augeas.Plo  augparse.Po  augrun.Plo  augtool.Po  builtin.Plo  errcode.Plo  fa.Plo  get.Plo  hash.Plo  info.Plo  internal.Plo  jmt.Plo  lens.Plo  liblexer_la-lexer.Plo  memory.Plo  parser.Plo  pathx.Plo  put.Plo  ref.Plo  regexp.Plo  syntax.Plo  transform.Plo
augeas-1.4.0/src/.libs/: augparse  augtool  libaugeas.lai  libaugeas.so.0.20.0  libfa.lai  libfa.so.1.4.1
include/: MetaState.h  Program.h  SCTransSystem.h  SafetyVerificationPass.h  Utils.h
include/AFA/: AFAState.h  AFAut.h
infinte/: 10_1.dot  11_1.dot  12_2.dot  14_1.dot  2_1.dot  3_1.dot  7_2.dot  8_2.dot  infinite.txt
lam-10/: l_1.dot  l_10.dot  l_2.dot  l_3.dot  l_4.dot  l_5.dot  l_6.dot  l_7.dot  l_8.dot  l_9.dot  l__PA.dot
lib/: CMakeLists.txt  Epsilon_test.cpp  MetaState.cpp  OnTheFly.cpp  Program.cpp  SCTransSystem.cpp  SafetyVerificationPass.cpp  Utils.cpp
lib/AFA/: AFAState.cpp  AFAut.cpp  DotToAFA.cpp  PassFourAFA.cpp  PassFourWeak.cpp  PassThree.cpp  PassTwo.cpp
libfaudes-2_26g/include/: cfl_abaseset.h  cfl_agenerator.h  cfl_attributes.h  cfl_baseset.h  cfl_basevector.h  cfl_bisimulation.h  cfl_cgenerator.h  cfl_conflequiv.h  cfl_definitions.h  cfl_determin.h  cfl_elementary.h  cfl_exception.h  cfl_functions.h  cfl_generator.h  cfl_graphfncts.h  cfl_helper.h  cfl_indexset.h  cfl_localgen.h  cfl_nameset.h  cfl_omega.h  cfl_parallel.h  cfl_platform.h  cfl_project.h  cfl_registry.h  cfl_regular.h  cfl_statemin.h  cfl_symbolset.h  cfl_symboltable.h  cfl_token.h  cfl_tokenreader.h  cfl_tokenwriter.h  cfl_transset.h  cfl_types.h  con_cctrim.h  con_closed.h  con_controllability.h  con_decomposability.h  con_decomposability_extension.h  con_supcc.h  configuration.h  (+95 more)
libfaudes-2_29d/include/: allplugins.h  cfl_generator.h  con_closed.h  con_controllability.h  con_supcc.h  configuration.h  lbp_function.h  lbp_include.h  lbp_load.h  libfaudes.rti  mtc_include.h  op_observercomputation.h  rtiautoload.cpp  rtiautoload.h  rtiautoload.i  syn_compsyn.h  syn_functions.h  syn_supnorm.h  syn_synthequiv.h  syn_tsupcon.h  syn_wsupcon.h
test/: 29_conditionals_vs.c  31_simple_loop5_vs.c  47_ticket_lock_hc_backoff_vs.c  Regex.txt  bigshot_p.c  dekker.ll  final.ll  global.c  global.ll  lamport.ll  lazy01.c  lock.c  lock.ll  lock2.c  peterson.bc  peterson.c  peterson.ll  spinspin.c  spinspin.ll  stateful01-1.c  test.c  test.ll  test2.c  test2.ll  triangular-1.c
